# ProGCC-V3-RP2040

./: .gitignore  .gitmodules  CMakeLists.txt  PROGCC_RP2040_manifest.json  README.md  manifest.cmake  manifest.json
include/: board_config.h  keypad_scan.h  main.h  progcc.h  progcc_defines.h  progcc_includes.h  progcc_multicore_flags.h  progcc_settings.h  progcc_types.h  progcc_usb.h  progcc_utils.h  remap.h  rgb.h
include/analog/: imu.h  snapback.h  stick.h  stick_scaling.h
include/devices/: dinput.h  gcinput.h  nsinput.h  nspi.h  swpro.h  webusb.h  xinput.h
include/switch/: switch_analog.h  switch_commands.h  switch_spi.h
include/usb/: desc_bos.h  progcc_usb.h  tusb_config.h  xinput_device.h
include/utilities/: interval.h
lib/hoja-lib-rp2040/: CMakeLists.txt  pkg.yml
lib/hoja-lib-rp2040/include/: hoja.h  hoja_comms.h  hoja_defines.h  hoja_includes.h  hoja_multicore_flags.h  hoja_settings.h  hoja_types.h
lib/hoja-lib-rp2040/include/devices/: dinput.h  gamecube.h  gcinput.h  n64.h  n64_crc.h  nspi.h  swpro.h  webusb.h  xinput.h
lib/hoja-lib-rp2040/include/input/: analog.h  imu.h  remap.h  safemode.h  snapback.h  stick_scaling.h
lib/hoja-lib-rp2040/include/switch/: switch_analog.h  switch_commands.h  switch_spi.h
lib/hoja-lib-rp2040/include/usb/: desc_bos.h  hoja_usb.h  tusb_config.h  xinput_device.h
lib/hoja-lib-rp2040/include/utilities/: interval.h  rgb.h
lib/hoja-lib-rp2040/pio/: joybus.pio  nserial.pio
lib/hoja-lib-rp2040/src/: hoja.c  hoja_comms.c  hoja_defines.c  hoja_settings.c
lib/hoja-lib-rp2040/src/devices/: gamecube.c  n64.c  nspi.c  swpro.c  webusb.c
lib/hoja-lib-rp2040/src/input/: analog.c  imu.c  remap.c  safemode.c  snapback.c  stick_scaling.c
lib/hoja-lib-rp2040/src/switch/: analog spi notes  switch_analog.c  switch_commands.c
lib/hoja-lib-rp2040/src/usb/: desc_bos.c  hoja_usb.c  xinput_device.c
lib/hoja-lib-rp2040/src/utilities/: rgb.c
pio/: joybus.pio  ws2812.pio
src/: app_hwtest.c  app_imu.c  app_rumble.c  app_rumble_cell.c  main.c  main.h  progcc.c  progcc_defines.c  progcc_settings.c  progcc_utils.c  remap.c  rgb.c
src/analog/: imu notes.txt  imu.c  snapback.c  stick.c  stick_scaling.c
src/devices/: dinput.c  gcinput.c  nsinput.c  nspi.c  swpro.c  webusb.c  xinput.c
src/switch/: switch_analog.c  switch_commands.c  switch_spi.c
src/usb/: progcc_usb.c  xinput_device.c
